# Gestione2-TelegramBot

./: README.md  pyproject.toml
gestione_bot/: __main__.py  utils.py
gestione_bot/database/: db.py  models.py
